# pld-launcher

./: .gitignore  auth_manager.py  bootstrapper.py  cloud_manager.py  config.py  game_launcher.py  index.html  main.py  main.spec  package-lock.json  package.json  requirements.txt  settings.py  sync_worker.py  ui_auth.py  ui_window.py  updater.py  version.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: autogenerated.toml
src-tauri/src/: auth.rs  launcher.rs  main.rs  sync.rs
src/components/: Auth.tsx
